samples/_failures_safe/1761706014_53af10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a6c28e7.c: In function ‘main’:
./samples/SAFE/__tmp_5a6c28e7.c:147:9: error: expected declaration or statement at end of input
  147 |         input[len - 1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_5a6c28e7.c:147:9: error: expected declaration or statement at end of input
